--- a/NetWork/NetWork.vcxproj
+++ b/NetWork/NetWork.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c249d5c3-57df-4c0e-b4c3-de1c4e641810}</ProjectGuid>
-    <RootNamespace>Inheritance</RootNamespace>
+    <ProjectGuid>{f333fc4f-65da-4edf-acae-1f20d7d3d9df}</ProjectGuid>
+    <RootNamespace>NetWork</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
